featL license md

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,5 +18,6 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "220768b84df2c41171cd8e284c63bbcbc515405d"
 }
